<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        />

    <CheckBox
        android:id="@+id/cb01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_name01"
        android:layout_below="@id/tv01"/>
    <CheckBox
        android:id="@+id/cb02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_name02"
        android:layout_below="@id/cb01"/>
    <CheckBox
        android:id="@+id/cb03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_name03"
        android:layout_below="@id/cb02"/>
    <CheckBox
        android:id="@+id/cb04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_name04"
        android:layout_below="@id/cb03"/>
    <CheckBox
        android:id="@+id/cb05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_name05"
        android:layout_below="@id/cb04"/>

    <Button
        android:id="@+id/btn_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:layout_below="@id/cball"
        />
    <CheckBox
        android:id="@+id/cball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_all"
        android:layout_below="@id/cb05"
        />

</RelativeLayout>